--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -25,3 +25,39 @@
   background-size: cover;
   background-position: center;
 }
+
+.hiddenBtn {
+  opacity: 0;
+}
+
+.load-more {
+  margin-left: 40%;
+}
+
+.header {
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(68, 22, 177);
+}
+
+.search-form {
+  display: block;
+  margin-left: 40%;
+  margin-top: 15px;
+}
+
+.photo-card {
+  margin: 50px 20px 0px 10px;
+  padding: 5px;
+  display: inline-block;
+}
+
+.info {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.info-item {
+  text-align: center;
+}
